--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://digtiarenko.github.io/kapustaApp_frontend",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /kapustaApp_frontend/"
+    "build": "parcel build src/*.html --public-url /kapustaApp_frontend/",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -22,9 +23,17 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "eslint": "^8.23.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
+    "posthtml-include": "^1.7.4",
+    "prettier": "^2.7.1"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "lint-staged": {
+    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,jsx,css,scss,md}": "prettier --write"
+  }
 }
