--- a/package.json
+++ b/package.json
@@ -44,13 +44,15 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.17.0",
+    "eslint": "^8.23.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
-    "prettier": "^2.6.2"
+    "prettier": "^2.7.1"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --fix",
-    "*.{js,jsx,css,scss,md}": "prettier --write"
+    "*.{js,jsx,css,scss,md}": "prettier --write",
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
