--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "redux-logger": "^3.0.6",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
