--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,14 @@
 # production
 /build
 
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
