--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-currency-input-field": "^3.6.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
