--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-currency-input-field": "^3.6.4",
     "react-dom": "^18.2.0",
+    "react-number-format": "^4.9.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
