--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.3",
     "react-number-format": "^4.9.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
