--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loader-spinner": "^5.3.3",
     "react-number-format": "^4.9.3",
     "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
