--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_API_URL=https://kapustaapplication.herokuapp.com/api
-##REACT_APP_BASE_API_URL=http://localhost:5000/api
+##REACT_APP_BASE_API_URL=https://kapustaapplication.herokuapp.com/api
+REACT_APP_BASE_API_URL=http://localhost:5000/api
