--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^3.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ellipsis-text": "^1.2.1",
     "react-loader-spinner": "^5.3.3",
     "react-number-format": "^4.9.3",
     "react-redux": "^8.0.2",
