add DetectClickOutside for dropdown, fixed padding button, add validation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nanoid": "^3.3.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.3",
     "react-number-format": "^4.9.3",
